[tool.poetry]
name = "market_screener"
version = "0.1.0"
description = ""
authors = ["Claas Resow <claas.resow@dwins.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
pyyaml = "^6.0.2"
pandas = "^2.2.2"
plotly = "^5.24.1"
numpy = "^2.1.3"
bs4 = "^0.0.2"
selenium = "^4.26.1"
praw = "^7.8.1"
vadersentiment = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "market_screener.main:main"